# Whisk3D-Editor

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  build_android.sh  build_mac.sh  build_web.sh  die_f1.txt  die_f10.txt  die_f6.txt  gw_f1.txt  gw_f40.txt  gw_f80.txt  n_tmp.txt  skel_f1.txt  skel_f10.txt  skel_f6.txt  w_f1.txt  w_f13.txt  w_f7.txt  wf12.txt  wf24.txt
W3D Examples/: README.md
jni/: Android.mk
jni/shim/GL/: gl.h  glu.h
main/: Undo.cpp  Undo.h  W3dInitUI.cpp  W3dLang.h  W3dLangTabla.h  constructor.cpp  constructor.h  controles.cpp  lectura-escritura.cpp  lectura-escritura.h  main.cpp  variables.cpp  variables.h
main/GeometriaUI/: Floor.cpp  GeometriaUI.h
main/ViewPorts/: LayoutInput.cpp  LayoutInput.h  Outliner.cpp  Outliner.h  Properties.cpp  Properties.h  ScrollBar.cpp  ScrollBar.h  Timeline.cpp  Timeline.h  UVEditor.cpp  UVEditor.h  ViewPort3D.cpp  ViewPort3D.h  ViewPorts.cpp  ViewPorts.h  W3dInput.h  WithBorder.cpp  WithBorder.h
main/ViewPorts/PopUp/: ColorPicker.cpp  ColorPicker.h  ConfirmarPopup.cpp  ConfirmarPopup.h  FileBrowser.cpp  FileBrowser.h  NumPad.cpp  NumPad.h  PopUpBase.cpp  PopUpBase.h  ProgressPopup.cpp  ProgressPopup.h  RedoMeshPanel.cpp  RedoMeshPanel.h
main/app/: W3dInitUI.cpp  W3dInitUI.h  constructor.cpp  constructor.h  controles.cpp  main.cpp  variables.cpp  variables.h
main/config/: W3dConfigGuardar.cpp  W3dLang.cpp  W3dProfile.cpp  W3dProfile.h  w3dVersion.cpp  w3dVersion.h
main/edit/: MeshEdit.cpp  MeshEdit.h  Modifier.h
main/importers/: export_gltf.cpp  export_gltf.h  import_fbx.cpp  import_gltf.cpp  import_gltf.h  import_obj.cpp  import_obj.h  import_vertex_animation.h  import_w3d.cpp  import_w3d.h
main/io/: lectura-escritura.cpp  lectura-escritura.h
main/objects/: Camera.cpp  Camera.h  Collection.cpp  Collection.h  Constraint.cpp  Constraint.h  Curve.cpp  Curve.h  EditMesh.cpp  EditMesh.h  Empty.cpp  Empty.h  Gamepad.cpp  Gamepad.h  Instance.cpp  Instance.h  Mirror.cpp  Mirror.h  ObjectMode.cpp  ObjectMode.h  Primitivas.cpp  Primitivas.h  Scene.cpp  Scene.h  Target.cpp  Target.h
main/render/: OpcionesRender.cpp  OpcionesRender.h  render.cpp  render.h
main/test/: W3dScript.cpp  W3dScript.h
main/ui/: W3dColors.cpp  W3dColors.h  W3dViewports.cpp  W3dViewports.h
main/ui/GeometriaUI/: Floor.h  GeometriaUI.cpp
main/ui/ViewPorts/: LayoutInput.cpp  LayoutInput.h  Notificaciones.cpp  Notificaciones.h  NumInput.cpp  NumInput.h  Outliner.cpp  Outliner.h  Parent.cpp  Parent.h  Pick3D.cpp  Pick3D.h  PoseTransform.cpp  PoseTransform.h  Properties.cpp  Properties.h  ScrollBar.cpp  ScrollBar.h  Timeline.cpp  Timeline.h  UVEditor.cpp  UVEditor.h  ViewPort3D.cpp  ViewPort3D.h  ViewPort3D_Stats.cpp  ViewPort3D_Toolbar.cpp  ViewPorts.cpp  ViewPorts.h  WithBorder.cpp
main/ui/ViewPorts/PopUp/: ColorPicker.cpp  ColorPicker.h  ConfirmarPopup.cpp  FileBrowser.cpp  FileBrowser.h  NumPad.cpp  NumPad.h  PopUpBase.h  ProgressPopup.cpp  RedoMeshPanel.cpp  RedoMeshPanel.h
main/undo/: Undo.cpp
platform/android/: README.md  build.gradle  build_android.sh
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/whisk3d/: Whisk3DActivity.java
platform/android/app/src/main/java/pvallet/com/github/hello_sdl2/: HelloSDL2Activity.java
platform/android/jni/: Android.mk  Application.mk
platform/android/jni/shim/GL/: glext.h
platform/android/jni/shim/SDL2/: SDL.h
platform/linux/: README.md  build_appimage.sh  build_linux.sh
platform/mac/: CMakeLists.txt  README.md  build_mac.sh
platform/mac/include/GL/: gl.h  glext.h  glu.h
platform/symbian/: .cproject  .project  README.md
platform/symbian/data/: Whisk3D.rss
platform/symbian/group/: Icons_scalable_dc.mk  Whisk3D.mmp  bld.inf
platform/symbian/inc/: Whisk3D.h  Whisk3D.hrh  Whisk3D.rls  Whisk3DContainer.h  bthidclient.h  bthidevent.h  fscompat.h  hidmonitor.h  w3dlayout.h  w3dmouse.h  w3dnewscene.h
platform/symbian/sis/: Whisk3D_armv5.pkg  Whisk3D_gcce.pkg  whisk3d_selfsign.cer  whisk3d_selfsign.key
platform/symbian/src/: Whisk3D.cpp  Whisk3DAppUi.cpp  Whisk3DContainer.cpp  hidmonitor.cpp  newdel_compat.cpp  w3dinput.cpp  w3dlayout.cpp  w3dmouse.cpp  w3dnewscene.cpp  w3dskelstubs.cpp  w3dtexload.cpp
platform/web/: README.md  build_web.sh  serve_nocache.py  shell.html
platform/web/GL/: gl.h  glext.h  glu.h
platform/windows/: CPackDate.cmake  README.md  build_windows.bat  whisk3d.rc.in
res/: config.ini
res/Skins/Whisk3D/: skin.ini
res/installer/: LEEME.txt
